--- a/index.html
+++ b/index.html
@@ -16,14 +16,24 @@
     </section>
 
     <section class="main-content">
-      <p>The MuseumXDesign Project is centred around identity and how it connects to the past.</p>
-      <p>On the first day, we brainstormed on what identity means and how we identify ourselves.</p>
-      <p>On the second we brought in the item we consider the most important to us. I chose my ipad. We looked around the Korea and had to choose an item that related to our own object. I chose ancient Korean coins. We then took photos of both objects and  of ourselves.</p>
+      <h3>The MuseumXDesign Project is centred around identity and how it connects to the past.</h3>
+      <h4>On the first day...</h4>
+      <p>...we brainstormed on what identity means and how we identify ourselves.</p>
+      <h4>On the second day...</h4>
+      <p>...we brought in the item we consider the most important to us. I chose my ipad. We looked around the Korea and had to choose an item that related to our own object. I chose ancient Korean coins. We then took photos of both objects and  of ourselves.</p>
       <img class="minipics" src="https://github.com/FenixAD/urban-parakeet/blob/master/IMG_3872.JPG?raw=true">
       <img class="minipics" src="https://github.com/FenixAD/urban-parakeet/blob/master/IMG_3867.JPG?raw=true">
-      <p>On the third day, we used photoshop to create an image/poster, inocrperting our phtography into it.</p>
+      <h4>On the third day...</h4>
+      <p>...we used photoshop to create an image/poster, inocrperting our phtography into it.</p>
       <img src="https://github.com/FenixAD/urban-parakeet/blob/master/Fenix.jpg?raw=true">
-      <p>It was facinating to do this because you never really stop and consider how technology of today can relate to something from an Ancient Era.</p>
+      <h3>It was facinating to do this because you never really stop and consider how technology of today can relate to something from an Ancient Era.</h3>
+      <h2>So how do Korean Mun (ancient coins) relate to iPads?</h2>
+      <p>These coins are circular with a square hole in the middle. My friend noticed the visual connection since the coing looks like a home button or the lens of a camera (which was her item)</p>
+      <ul>
+        <li>Both items are made of metal</li>
+        <li>They have the symbol of their creators, which are easy to reconise</li>
+      </ul>
+      <p>The connection went furthur when we realised that having an iPad or a HD camera is a sign of wealth. Apple products are representative of expensive technology, which is why ancient currency links with our items.</p>
       
 
 
