--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <img class="minipics" src="https://github.com/FenixAD/urban-parakeet/blob/master/IMG_3872.JPG?raw=true">
       <img class="minipics" src="https://github.com/FenixAD/urban-parakeet/blob/master/IMG_3867.JPG?raw=true">
       <h4>On the third day...</h4>
-      <p>...we used photoshop to create an image/poster, inocrperting our phtography into it.</p>
-      <img src="https://github.com/FenixAD/urban-parakeet/blob/master/Fenix.jpg?raw=true">
+      <p>...we used photoshop to create an image/poster, incorperating our photography into it.</p>
+      <img class="centrepics" src="https://github.com/FenixAD/urban-parakeet/blob/master/Fenix.jpg?raw=true">
       <h3>It was facinating to do this because you never really stop and consider how technology of today can relate to something from an Ancient Era.</h3>
       <h2>So how do Korean Mun (ancient coins) relate to iPads?</h2>
       <p>These coins are circular with a square hole in the middle. My friend noticed the visual connection since the coing looks like a home button or the lens of a camera (which was her item)</p>
@@ -34,6 +34,9 @@
         <li>They have the symbol of their creators, which are easy to reconise</li>
       </ul>
       <p>The connection went furthur when we realised that having an iPad or a HD camera is a sign of wealth. Apple products are representative of expensive technology, which is why ancient currency links with our items.</p>
+      <p>Not to mention, coins like Korean mun that had holes in them could be worn together as a necklace. It's a status sign that can't be missed, just like our technology in modern day.</p>
+      <p>It's just another thing that makes up your identity.</p>
+      
       
 
 
