--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
       <h4>On the first day...</h4>
       <p>...we brainstormed on what identity means and how we identify ourselves.</p>
       <h4>On the second day...</h4>
-      <p>...we brought in the item we consider the most important to us. I chose my ipad. We looked around the Korea and had to choose an item that related to our own object. I chose ancient Korean coins. We then took photos of both objects and  of ourselves.</p>
+      <p>...we brought in the item we consider the most important to us. I chose my iPad because with it I have access to my friends, my interests, my hobbies, my music and limitless knowledge and information. I spend most of my time on it, so my life relies a lot on it, whether it be entertaining me or connecting me to my friends to share every moment. We looked around the Korea and had to choose an item that related to our own object. I chose ancient Korean coins. We then took photos of both objects and  of ourselves.</p>
       <img class="minipics" src="https://github.com/FenixAD/urban-parakeet/blob/master/IMG_3872.JPG?raw=true">
       <img class="minipics" src="https://github.com/FenixAD/urban-parakeet/blob/master/IMG_3867.JPG?raw=true">
       <h4>On the third day...</h4>
-      <p>...we used photoshop to create an image/poster, incorperating our photography into it.</p>
+      <p>...we used photoshop to create an image/poster, incorporating our photography into it.</p>
       <img class="centrepics" src="https://github.com/FenixAD/urban-parakeet/blob/master/Fenix.jpg?raw=true">
-      <h3>It was facinating to do this because you never really stop and consider how technology of today can relate to something from an Ancient Era.</h3>
+      <h3>It was fascinating to do this because you never really stop and consider how technology of today can relate to something from an Ancient Era.</h3>
       <h2>So how do Korean Mun (ancient coins) relate to iPads?</h2>
-      <p>These coins are circular with a square hole in the middle. My friend noticed the visual connection since the coing looks like a home button or the lens of a camera (which was her item)</p>
+      <p>These coins are circular with a square hole in the middle. My friend noticed the visual connection since the coin looks like a home button or the lens of a camera (which was her item)</p>
       <ul>
         <li>Both items are made of metal</li>
-        <li>They have the symbol of their creators, which are easy to reconise</li>
+        <li>They have the symbol of their creators, which are easy to recognise</li>
       </ul>
-      <p>The connection went furthur when we realised that having an iPad or a HD camera is a sign of wealth. Apple products are representative of expensive technology, which is why ancient currency links with our items.</p>
+      <p>The connection went further when we realised that having an iPad or a HD camera is a sign of wealth. Apple products are representative of expensive technology, which is why ancient currency links with our items.</p>
       <p>Not to mention, coins like Korean mun that had holes in them could be worn together as a necklace. It's a status sign that can't be missed, just like our technology in modern day.</p>
       <p>It's just another thing that makes up your identity.</p>
       
